// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2.testing;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option java_outer_classname = "TimeServiceOuterClass";
option java_package = "com.daml.ledger.api.v2.testing";
option csharp_namespace = "Com.Daml.Ledger.Api.V2.Testing";

// Optional service, exposed for testing static time scenarios.
service TimeService {

  // Returns the current time according to the ledger server.
  rpc GetTime (GetTimeRequest) returns (GetTimeResponse);

  // Allows clients to change the ledger's clock in an atomic get-and-set operation.
  rpc SetTime (SetTimeRequest) returns (google.protobuf.Empty);
}

message GetTimeRequest {

}

message GetTimeResponse {

  // The current time according to the ledger server.
  google.protobuf.Timestamp current_time = 1;
}

message SetTimeRequest {

  // MUST precisely match the current time as it's known to the ledger server.
  google.protobuf.Timestamp current_time = 1;

  // The time the client wants to set on the ledger.
  // MUST be a point int time after ``current_time``.
  google.protobuf.Timestamp new_time = 2;
}
